--- a/views/login/index.html
+++ b/views/login/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
 <body>
     <h1>Login</h1>
 
@@ -36,12 +43,18 @@
         </div>
 
         <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+        <!-- <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button> -->
+        <!-- <button type="submit" class="btn btn-dark btn-block mb-4">Sign-in</button> -->
+        <div class="mx-auto bg-warning" style="width:150px">
+            <button type="submit" class="btn btn-dark btn-block mb-4">Sign-in</button>
+        </div>
 
-        <!-- Register buttons -->
+
+
+        <!-- Register buttons
         <div class="text-center">
             <p>Not a member? <a href="#!">Register</a></p>
-        </div>
+        </div> -->
     </form>
 
 
