--- a/www/css/base.css
+++ b/www/css/base.css
@@ -8,8 +8,9 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
+  height: fit-content;
+  background-position: 0%;
+  background: transparent;
   font-size: 14px;
 }
 
@@ -22,4 +23,6 @@ form {
   width: 400px;
   max-width: 400px;
 }
+
+
 
